--- a/handling.tex
+++ b/handling.tex
@@ -68,6 +68,7 @@ I also highlight some important properties of these operations.
 \clearpage
 
 \section{Formal structured data}
+\label{sec:formal-structured-data}
 
 \newcommand{\domainof}[1]{\mathcal{D}\!\left(#1\right)}
 \newcommand{\missing}{\text{?}}
