Discussing VC entropy.

--- a/glossary.tex
+++ b/glossary.tex
@@ -18,6 +18,7 @@
 \newabbreviation{slt}{SLT}{statistical learning theory}
 \newabbreviation{ai}{AI}{artificial intelligence}
 \newabbreviation{ml}{ML}{machine learning}
+\newabbreviation{vc}{VC}{Vapnik-Chervonenkis}
 
 \newglossaryentry{ontology}{%
   name=ontology,
