--- a/references.bib
+++ b/references.bib
@@ -530,3 +530,13 @@ journal = {Commun. ACM},
 month = jan,
 pages = {107–113},
 }
+
+@article{Vapnik1991,
+  title={The necessary and sufficient conditions for consistency of the method of empirical risk minimization},
+  author={Vapnik, Vladimir N and Chervonenkis, A},
+  journal={Pattern Recognition and Image Analysis},
+  volume={1},
+  number={3},
+  pages={284--305},
+  year={1991}
+}
