--- a/references.bib
+++ b/references.bib
@@ -540,3 +540,13 @@ pages = {107–113},
   pages={284--305},
   year={1991}
 }
+
+@inproceedings{Vapnik1968,
+  title={On the uniform convergence of relative frequencies of events to their probabilities},
+  author={Vapnik, Vladimir and Chervonenkis, A},
+  booktitle={Doklady Akademii Nauk USSR},
+  volume={181},
+  number={4},
+  pages={781--787},
+  year={1968}
+}
